# tictactoe-tcp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base.c  base.h  main.c  ui.c  ui.h
client/: ai.h  anim.c  anim.h  config.c  config.h  localhost.c  main.c  menu.c  online.c  scene.c  scene.h  ui.c  ui.h
net/: client.c  net.c  net.h  room.h  server.c
server/: main.c  room.c  room.h  server.h
shared/: game.c  game.h  net.c  net.h
src/: ai.c  ai.h  localhost.c  main.c  menu.c  online.c  scene.c  scene.h  ui.c  ui.h
